syntax = 'proto3';

option java_package = 'acmcsus.debugjudge.proto';
option java_outer_classname = 'WebSocket';

package acmcsus.debugjudge;

message C2SMessage {

  oneof value {
    LoginMessage loginMessage = 5;
  }

  message LoginMessage {
    string nonce = 1;
  }
}

message S2CMessage {

  oneof value {
    DebugMessage debugMessage = 5;
    AlertMessage alertMessage = 6;
    LoginResultMessage loginResultMessage = 7;
    NotificationMessage notificationMessage = 8;
    CompetitionStateChangeMessage competitionStateChangeMessage = 9;
  }

  message DebugMessage {
    string message = 1;
  }
  message AlertMessage {
    string message = 1;
  }
  message LoginResultMessage {
    LoginResult value = 1;

    enum LoginResult {
      SUCCESS = 0;
      FAILURE = 1;
    }
  }
  message NotificationMessage {
    string message = 1;
    string icon = 2;

    enum NotificationLevel {
      DEFAULT = 0;
      SUCCESS = 1;
      FAILURE = 2;
      WARNING = 3;
    }
  }
  message CompetitionStateChangeMessage {
    int64 time_millis = 1;
    CompetitionState state = 2;

    enum CompetitionState {
      UNKNOWN = 0;
      WAITING = 1;
      STARTED = 2;
      PAUSED = 3;
      STOPPED = 5;
    }
  }
}
